Move JVM settings to gradlew so command-line users can benefit too. N.b. this only sets the defaults.  No change if caller sets any JVM option.
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@4596 7c7dc5f5-a22d-0410-a3af-b41755a11667