@@ -8,8 +8,6 @@
 set DIRNAME=%~dp0
 if "%DIRNAME%" == "" set DIRNAME=\.\
 
-:: Change Java memory settings here:
-set GRADLE_OPTS=-Xms256m -Xmx1g -XX:MaxPermSize=256m
 ::cd
 ::echo "DIRNAME=(%DIRNAME%)"
 :: gradlew must be run from the HyperSQL build directory:
